1-example-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-pod
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: debug-volume
      mountPath: /mnt
  volumes:
    - name: debug-volume
      persistentVolumeClaim:
        claimName: pradeep-pvc
  restartPolicy: Always
