init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "order-microservice-dep"
  annotations:
    kubernetes.io/change-cause: "order-microservice with version 3.0.0"
spec:
  # modify replicas according to your case
  replicas: 2
  selector:
    matchLabels:
      app: "order-microservice"
  template:
    metadata:
      labels:
        app: "order-microservice"
    spec:
      containers:
      - name: "order-microservice"
        image: "classpathio/order-microservice:3.0.0"
        ports:
        - name: app
          containerPort:  8222
          protocol: TCP
        volumeMounts:
        - name: app-config
          mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: order-microservice-cm
