mongodb-basic-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod-basic
  labels:
    app: mongodb
spec:
  containers:
  - name: mongodb-container
    image: "mongo:latest"
    resources:
      requests:
        cpu: "350m"
        memory: "512Mi"
      limits:
        cpu: "500m"
        memory: "512Mi"
    ports:
    - containerPort:  27017
      name:  db-port
