order-microservice-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "order-microservice"
spec:
  containers:
  - name: "order-microservice"
    image: "classpathio/order-microservice"
    ports:
    - containerPort:  8080
      name:  http
  restartPolicy: Always
