pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  containers:
  - name: mongodb
    image: "mongo:latest"
    ports:
    - containerPort:  27017
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  affinity:
    podAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchLabels:
              app: test
          topologyKey: "kubernetes.io/hostname"     
  containers:
  - name: nginx
    image: "nginx"
    ports:
    - containerPort:  80
      name:  http
  restartPolicy: Always
