sa-role-binding.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: pradeep-ns
spec:
  serviceAccountName: pod-reader-sa
  containers:
  - name: alpine
    image: "alpine:latest"
    command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Always
