order-microservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-microservice-svc
spec:
  selector:
    app: "order-microservice"
  type: ClusterIP
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 8222
