istio-order-microservice-traffic-splitting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "order-microservice-dep-v1"
  labels:
    app: order-microservice
    version: v1
  annotations:
    kubernetes.io/change-cause: "order-microservice with version 3.0.0"
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    matchLabels:
      app: "order-microservice"
      version: v1
  template:
    metadata:
      labels:
        app: "order-microservice"
        version: v1
    spec:
      containers:
      - name: "order-microservice"
        image: "classpathio/order-microservice:3.0.0"
        ports:
        - name: app
          containerPort:  8222
          protocol: TCP
        volumeMounts:
        - name: app-config
          mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: order-microservice-cm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "order-microservice-dep-v2"
  labels:
    app: order-microservice
    version: v2
  annotations:
    kubernetes.io/change-cause: "order-microservice with version 3.0.0"
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    matchLabels:
      app: "order-microservice"
      version: v2
  template:
    metadata:
      labels:
        app: "order-microservice"
        version: v2
    spec:
      containers:
      - name: "order-microservice"
        image: "classpathio/order-microservice:3.0.0"
        ports:
        - name: app
          containerPort:  8222
          protocol: TCP
        volumeMounts:
        - name: app-config
          mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: order-microservice-cm
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: order-microservice-destination-rule
spec:
  host: order-microservice-svc.pradeep-ns.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1   
  - name: v2
    labels:
      version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: order-microservice-svc
spec:
  selector:
    app: "order-microservice"
  type: ClusterIP
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 8222
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: order-microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http 
      protocol: HTTP 
    hosts:
    - "pradeep.classpath.io"

---
# VirtualService
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: order-microservice
spec:
  hosts:
  - "pradeep.classpath.io"
  gateways:
  - order-microservice-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/orders
    route:
    - destination:
        host: order-microservice-svc.pradeep-ns.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 80    
    - destination:
        host: order-microservice-svc.pradeep-ns.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 20
