istio-order-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "order-microservice-dep"
  annotations:
    kubernetes.io/change-cause: "order-microservice with version 3.0.0"
spec:
  # modify replicas according to your case
  replicas: 2
  selector:
    matchLabels:
      app: "order-microservice"
  template:
    metadata:
      labels:
        app: "order-microservice"
    spec:
      containers:
      - name: "order-microservice"
        image: "classpathio/order-microservice:3.0.0"
        ports:
        - name: app
          containerPort:  8222
          protocol: TCP
        volumeMounts:
        - name: app-config
          mountPath: /app/config
      volumes:
        - name: app-config
          configMap:
            name: order-microservice-cm
---
apiVersion: v1
kind: Service
metadata:
  name: order-microservice-svc
spec:
  selector:
    app: "order-microservice"
  type: ClusterIP
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 8222
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: order-microservice-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http 
      protocol: HTTP 
    hosts:
    - "pradeep.classpath.io"

---
# VirtualService
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: order-microservice
spec:
  hosts:
  - "pradeep.classpath.io"
  gateways:
  - order-microservice-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/orders
    route:
    - destination:
        host: order-microservice
        port:
          number: 80
